--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Figma Plugin Template",
-  "id": "00000000",
+  "name": "Figma to Tailwind config",
+  "id": "1109707301583496087",
   "api": "1.0.0",
   "main": "dist/code.js",
   "ui": "dist/ui.html",
