--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "figma-plugin-react-template",
+	"name": "figma-to-tailwind",
 	"version": "1.0.0",
-	"description": "This plugin template uses Typescript. If you are familiar with Javascript, Typescript will look very familiar. In fact, valid Javascript code is already valid Typescript code.",
+	"description": "figma to tailwind",
 	"license": "ISC",
 	"scripts": {
 		"build": "webpack --mode=production",
@@ -9,11 +9,14 @@
 		"prettier:format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,css,json}' "
 	},
 	"dependencies": {
+		"materialize-css": "^1.0.0",
 		"react": "^17.0.2",
-		"react-dom": "^17.0.2"
+		"react-dom": "^17.0.2",
+		"react-materialize": "^3.10.0"
 	},
 	"devDependencies": {
 		"@figma/plugin-typings": "^1.24.0",
+		"@types/lodash": "^4.14.182",
 		"@types/react": "^17.0.11",
 		"@types/react-dom": "^17.0.7",
 		"css-loader": "^5.0.1",
