--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -30,6 +30,8 @@ jobs:
     - uses: "marvinpinto/action-automatic-releases@latest"
       with:
         repo_token: "${{ secrets.FT_TOKEN }}"
+        automatic_release_tag: "latest"
+        title: "Release Build"
         prerelease: false
         files: |
           *
