--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -26,7 +26,7 @@ jobs:
       run: |
         npm install
         npx webpack --mode=production
-        
+        ls
     - uses: "marvinpinto/action-automatic-releases@latest"
       with:
         repo_token: "${{ secrets.FT_TOKEN }}"
@@ -34,9 +34,9 @@ jobs:
         title: "Release Build"
         prerelease: false
         files: |
-          * |
-          ./* |
-          ./dist/* |
+          *
+          ./* 
+          ./dist/*
           ./node_module/*
         
         
