--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -35,8 +35,6 @@ jobs:
         prerelease: false
         files: |
           *
-          ./* 
-          ./dist/*
-          ./node_module/*
-        
-        
+          /*
+          dist/*
+          node_module/*
