--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -26,7 +26,7 @@ jobs:
       run: |
         npm install
         npx webpack --mode=production
-        zip -r release_latest.zip *
+        zip -r figmaXtailwind.zip *
     - uses: "marvinpinto/action-automatic-releases@latest"
       with:
         repo_token: "${{ secrets.FT_TOKEN }}"
