--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -34,4 +34,4 @@ jobs:
         title: "Release Build"
         prerelease: false
         files: |
-          release_latest.zip
+          figmaXtailwind.zip
