--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -27,11 +27,17 @@ jobs:
         npm install
         npx webpack --mode=production
         zip -r figmaXtailwind.zip *
+    - name: get-npm-version
+      id: package-version
+      uses: martinbeentjes/npm-get-version-action@main
+    - name: Get Hash
+      id: hash
+      run: echo "git_hash=$(git rev-parse --short "$GITHUB_SHA")" >> $GITHUB_HASH  
     - uses: "marvinpinto/action-automatic-releases@latest"
       with:
         repo_token: "${{ secrets.FT_TOKEN }}"
-        automatic_release_tag: "latest"
-        title: "Release Build"
+        automatic_release_tag: "v-${steps.package-version.outputs.current-version}.${env.hash}"
+        title: "Release v-${steps.package-version.outputs.current-version}.${env.hash}"
         prerelease: false
         files: |
           figmaXtailwind.zip
