--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -32,12 +32,12 @@ jobs:
       uses: martinbeentjes/npm-get-version-action@main
     - name: Get Hash
       id: hash
-      run: echo "git_hash=$(git rev-parse --short "$GITHUB_SHA")" >> $GITHUB_HASH  
+      run: echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV  
     - uses: "marvinpinto/action-automatic-releases@latest"
       with:
         repo_token: "${{ secrets.FT_TOKEN }}"
         automatic_release_tag: "v-${steps.package-version.outputs.current-version}.${env.hash}"
-        title: "Release v-${steps.package-version.outputs.current-version}.${env.hash}"
+        title: "Release v-${steps.package-version.outputs.current-version}.${SHORT_SHA}"
         prerelease: false
         files: |
           figmaXtailwind.zip
