--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -21,18 +21,17 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-
+    - name: get-npm-version
+      id: package-version
+      uses: martinbeentjes/npm-get-version-action@main
+    - name: Get Hash version
+      id: vars
+      run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)" 
     - name: Build
       run: |
         npm install
         npx webpack --mode=production
-        zip -r figmaXtailwind.zip *
-    - name: get-npm-version
-      id: package-version
-      uses: martinbeentjes/npm-get-version-action@main
-    - name: Set outputs
-      id: vars
-      run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"  
+        zip -r figmaXtailwind_v-${{steps.package-version.outputs.current-version}}.${{steps.vars.outputs.sha_short}}.zip * 
     - uses: "marvinpinto/action-automatic-releases@latest"
       with:
         repo_token: "${{ secrets.FT_TOKEN }}"
@@ -40,4 +39,4 @@ jobs:
         title: "Release v-${{steps.package-version.outputs.current-version}}.${{steps.vars.outputs.sha_short}}"
         prerelease: false
         files: |
-          figmaXtailwind.zip
+          figmaXtailwind_v-${{steps.package-version.outputs.current-version}}.${{steps.vars.outputs.sha_short}}.zip.zip
