--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -39,4 +39,4 @@ jobs:
         title: "Release v-${{steps.package-version.outputs.current-version}}.${{steps.vars.outputs.sha_short}}"
         prerelease: false
         files: |
-          figmaXtailwind_v-${{steps.package-version.outputs.current-version}}.${{steps.vars.outputs.sha_short}}.zip.zip
+          figmaXtailwind_v-${{steps.package-version.outputs.current-version}}.${{steps.vars.outputs.sha_short}}.zip
