--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "figma-to-tailwind",
-	"version": "1.0.0",
+	"version": "1.0",
 	"description": "figma to tailwind",
 	"license": "ISC",
 	"scripts": {
@@ -31,6 +31,7 @@
 	"devDependencies": {
 		"@figma/plugin-typings": "^1.24.0",
 		"@types/lodash": "^4.14.182",
+		"@types/node": "^18.8.3",
 		"@types/react": "^17.0.11",
 		"@types/react-dom": "^17.0.7",
 		"css-loader": "^5.0.1",
