--- a/package.json
+++ b/package.json
@@ -17,14 +17,13 @@
 		"html-webpack-inline-source-plugin": "0.0.10",
 		"jszip": "^3.10.1",
 		"livereload": "^0.7.0",
-		"materialize-css": "^1.0.0",
+		"materialize-css": "^1.0.0-rc.2",
 		"prism-react-renderer": "^1.1.1",
 		"prop-types": "^15.7.2",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-materialize": "^3.10.0",
 		"react-router-dom": "^5.2.0",
-		"reactn": "^2.2.7",
 		"svg4everybody": "^2.1.9",
 		"use-force-update": "^1.0.7"
 	},
